[gd_scene load_steps=9 format=2]

[ext_resource path="res://Card/CardBase.png" type="Texture" id=1]
[ext_resource path="res://Card/Empty.png" type="Texture" id=2]
[ext_resource path="res://PixelFont.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Card/Card.gd" type="Script" id=4]
[ext_resource path="res://SFX/CardSound.wav" type="AudioStream" id=5]
[ext_resource path="res://SFX/ClickEffectSFX.wav" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 24 )

[node name="Card" type="KinematicBody2D" groups=["Card"]]
collision_mask = 0
input_pickable = true
script = ExtResource( 4 )

[node name="Base" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Image" type="Sprite" parent="Base"]
position = Vector2( 0, -9 )
scale = Vector2( 1.04167, 1.04167 )
texture = ExtResource( 2 )
offset = Vector2( 0.5, 0 )

[node name="Effect" type="Label" parent="Base"]
margin_left = -14.0
margin_top = 7.0
margin_right = 14.0
margin_bottom = 22.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "--"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorTween" type="Tween" parent="."]

[node name="Tween" type="Tween" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Move" type="Tween" parent="."]

[node name="CardHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
pitch_scale = 2.0

[node name="ParticleSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="CardPlayed" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
pitch_scale = 0.5

[connection signal="input_event" from="." to="." method="_on_Card_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Card_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Card_mouse_exited"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
